--- a/staticfiles/css/Login_2.css
+++ b/staticfiles/css/Login_2.css
@@ -82,6 +82,30 @@ body{
     font-weight: 700;
     font-size: 1rem;
 }
+
+/* Alert Messages */
+.alert {
+    padding: 12px 20px;
+    margin-bottom: 20px;
+    border-radius: 10px;
+    font-weight: bold;
+    text-align: center;
+    width: 80%;
+    max-width: 400px;
+}
+
+.alert-success {
+    background-color: #d4edda;
+    color: #155724;
+    border: 1px solid #c3e6cb;
+}
+
+.alert-error {
+    background-color: #f8d7da;
+    color: #721c24;
+    border: 1px solid #f5c6cb;
+}
+
 @media screen and (max-width:768px) {
     .login-img{
         display: none;
@@ -91,5 +115,8 @@ body{
     }
     .form-group ,.button-form {
         width: 80%;
+    }
+    .alert {
+        width: 90%;
     }
 }
