--- a/templates/MainPage.html
+++ b/templates/MainPage.html
@@ -26,8 +26,8 @@
      از معرفی جدیدترین مدل‌های گوشی و لپ‌تاپ گرفته تا بررسی تخصصی قابلیت‌های هر دستگاه، ما اطلاعات کاربردی و دقیق را در اختیار شما قرار می‌دهیم
           
         </p>
-        <form action="">
-            <input type="text" placeholder="دنبال چه چیزی میگردید؟">
+        <form action="/Product/" method="get">
+            <input type="text" placeholder="دنبال چه چیزی میگردید؟" name="search">
             <button>
                جستجو محصولات
             </button>
