--- a/templates/base/base.html
+++ b/templates/base/base.html
@@ -21,7 +21,7 @@
     <body>
         {% include 'base/header_persian.html' %}
         
-        <div class="page-container" style="width: 100%">
+        <div class="page-container" style="width: 100%; margin-bottom: 70px;">
             {% block content %}{% endblock %}
         </div>
         
