--- a/staticfiles/css/footer.css
+++ b/staticfiles/css/footer.css
@@ -6,7 +6,7 @@ html, body {
 }
 body{
     direction: rtl;
-    font-family: Tanha;
+    font-family: Tanha, serif;
 
 }
 
@@ -25,7 +25,6 @@ footer {
     color: #333;
     padding: 30px 40px;
     direction: rtl;
-    margin-top: 50px;
     width: 100%;
 }
 
@@ -90,7 +89,7 @@ footer {
 }
 
 .social a {
-  font-size: 20x;
+  font-size: 20px;
   margin-left: 10px;
   padding: 0.4rem;
  
